[tool.poetry]
name = "wimshow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.2"
matplotlib = "^3.4.2"
PyQt5 = "^5.15.4"
remi = "^2021.3.2"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
